--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Inject environment variables
         run: |
           echo "VITE_REACT_APP_FIREBASE_API_KEY=${{ secrets.VITE_REACT_APP_FIREBASE_API_KEY }}" >> $GITHUB_ENV
+          echo "VITE_SERVER_URL=${{ secrets.VITE_SERVER_URL }}" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: npm install
@@ -29,6 +30,7 @@ jobs:
         run: npm run build
         env:
           VITE_REACT_APP_FIREBASE_API_KEY: ${{ secrets.VITE_REACT_APP_FIREBASE_API_KEY }}
+          VITE_SERVER_URL: ${{ secrets.VITE_SERVER_URL }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
